--- a/Utilities.html
+++ b/Utilities.html
@@ -28,11 +28,11 @@
         </aside>
         <main>
             <h2 class="Main-Heading">Utilities</h2>
-            <p class="descriptionAvatar">This component consist of many utility component for faster reponsive website development.
+            <p class="description">This component consist of many utility component for faster reponsive website development.
             </p>
 
-            <h4 class="subheadingAvatar">Headings</h4>
-            <p class="descriptionAvatar">There are almost 6 varities of heading available for you which you can include in Heading,Sub-Headings,Paragraph Title and any more as per your requirement.</p>
+            <h4 class="subheading">Headings</h4>
+            <p class="description">There are almost 6 varities of heading available for you which you can include in Heading,Sub-Headings,Paragraph Title and any more as per your requirement.</p>
             <div class="headingContainer">
                 <h1>Heading-1</h1>
                 <h2>Heading-2</h2>
@@ -43,13 +43,13 @@
             </div>
 
             <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%2520%2520%2509%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522headingContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch1%253EHeading-1%253C%252Fh1%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch2%253EHeading-2%253C%252Fh2%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch3%253EHeading-3%253C%252Fh3%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch4%253EHeading-4%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch5%253EHeading-5%253C%252Fh5%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch6%253EHeading-6%253C%252Fh6%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
-                style="width: 736px; height: 354px; border:0; transform: scale(1); overflow:hidden;"
+                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%2520class%253D%2522headingContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%253Ch1%253EHeading-1%253C%252Fh1%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Ch2%253EHeading-2%253C%252Fh2%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Ch3%253EHeading-3%253C%252Fh3%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Ch4%253EHeading-4%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Ch5%253EHeading-5%253C%252Fh5%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Ch6%253EHeading-6%253C%252Fh6%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%253C%252Fdiv%253E"
+                style="width: 290px; height: 278px; border:0; transform: scale(1); overflow:hidden;"
                 sandbox="allow-scripts allow-same-origin">
-             </iframe>
+            </iframe>
             
-            <h4 class="subheadingAvatar">Texts Sizes</h4>
-            <p class="descriptionAvatar">There are some different sizes of text avaiable for you.</p>
+            <h4 class="subheading">Texts Sizes</h4>
+            <p class="description">There are some different sizes of text avaiable for you.</p>
 
             <div class="headingContainer">
                 <div class="text smallText">
@@ -70,13 +70,13 @@
             </div>
 
             <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%2520%2520%2509%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522headingContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520smallText%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ESmaller%2520Text.%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520mediumText%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253EMedium%2520Text%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520largeText%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ELarge%2520Text%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520largerText%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ELarger%2520Text%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
-                style="width: 736px; height: 516px; border:0; transform: scale(1); overflow:hidden;"
+                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522headingContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520smallText%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ESmaller%2520Text.%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520mediumText%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253EMedium%2520Text%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520largeText%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ELarge%2520Text%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520largerText%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ELarger%2520Text%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%253C%252Fdiv%253E"
+                style="width: 312px; height: 412px; border:0; transform: scale(1); overflow:hidden;"
                 sandbox="allow-scripts allow-same-origin">
-             </iframe>
+            </iframe>
 
-            <h4 class="subheadingAvatar">Texts Alignment</h4>
-            <p class="descriptionAvatar">There are some different alignment of text avaiable for you.</p>
+            <h4 class="subheading">Texts Alignment</h4>
+            <p class="description">There are some different alignment of text avaiable for you.</p>
 
             <div class="headingContainer">
                 <div class="text default">
@@ -97,10 +97,10 @@
             </div>
 
             <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%2520%2520%2509%253Cdiv%2520class%253D%2522headingContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520default%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253EInherit%2520Align%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520left%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ELeft%2520Align%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520right%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ERight%2520Align%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520center%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ECenter%2520Align%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2509%253C%252Fdiv%253E"
-                style="width: 736px; height: 498px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-             </iframe>
+            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522headingContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520default%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253EInherit%2520Align%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520left%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ELeft%2520Align%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520right%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ERight%2520Align%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522text%2520center%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%253ECenter%2520Align%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%253C%252Fdiv%253E"
+            style="width: 290px; height: 412px; border:0; transform: scale(1); overflow:hidden;"
+            sandbox="allow-scripts allow-same-origin">
+          </iframe>
         </main>
     </div>
 </body>
