--- a/button.html
+++ b/button.html
@@ -28,8 +28,8 @@
         </aside>
         <main>
             <h2 class="Main-Heading">Button</h2>
-            <p class="descriptionAvatar">The Button Component is used to trigger an action or event,such as submitting a form,opening a dialog,canceling an action,or performing a delete operation.</p>
-            <h4 class="subheadingAvatar">Some example</h4>
+            <p class="description">The Button Component is used to trigger an action or event,such as submitting a form,opening a dialog,canceling an action,or performing a delete operation.</p>
+            <h4 class="subheading">Some example</h4>
 
             <div class="ButtonContainer">
                 <button class="btn primary">
@@ -66,13 +66,13 @@
             </div>
 
             <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520primary%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Primary%250A%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520secondary%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Secondary%250A%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520success%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Success%250A%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520warning%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Warning%250A%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520information%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Info%250A%2520%2520%2520%2520%2520%253C%252Fbutton%253E%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520danger%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Danger%250A%2520%2520%2520%2520%2520%253C%252Fbutton%253E%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520light%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Light%250A%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520darkBtn%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Dark%250A%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%253C%252Fdiv%253E"
-            style="width: 736px; height: 785px; border:0; transform: scale(1); overflow:hidden;"
+            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520primary%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Primary%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520secondary%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Secondary%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520success%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Success%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520warning%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Warning%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520information%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Info%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520danger%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Danger%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520light%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Light%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520darkBtn%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Dark%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%2520%253C%252Fdiv%253E"
+            style="width: 383px; height: 622px; border:0; transform: scale(1); overflow:hidden;"
             sandbox="allow-scripts allow-same-origin">
-          </iframe>
+            </iframe>
 
-          <h4 class="subheadingAvatar">Button Sizes</h4>
-          <p class="descriptionAvatar">Buttons are also available in different larger and smaller sizes.If you want some than check below code snippet.</p>
+          <h4 class="subheading">Button Sizes</h4>
+          <p class="description">Buttons are also available in different larger and smaller sizes.If you want some than check below code snippet.</p>
           
           <div class="ButtonContainer">
             <button class="btn darkBtn btn-small">
@@ -88,13 +88,14 @@
           </div>
 
           <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520darkBtn%2520btn-small%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2509Small%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520darkBtn%2520btn-medium%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Medium%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%2520%250A%250A%2509%2509%253Cbutton%2520class%253D%2522btn%2520darkBtn%2520btn-large%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Large%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%2520%250A%250A%2509%2509%253Cbutton%2520class%253D%2522btn%2520darkBtn%2520btn-larger%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Larger%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%2520%2520%253C%252Fdiv%253E"
-            style="width: 736px; height: 498px; border:0; transform: scale(1); overflow:hidden;"
+            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520darkBtn%2520btn-small%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Small%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520darkBtn%2520btn-medium%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Medium%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%2520%250A%250A%2509%2509%253Cbutton%2520class%253D%2522btn%2520darkBtn%2520btn-large%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Large%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%2520%250A%250A%2509%2509%253Cbutton%2520class%253D%2522btn%2520darkBtn%2520btn-larger%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Larger%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%2520%2520%253C%252Fdiv%253E"
+            style="width: 405px; height: 382px; border:0; transform: scale(1); overflow:hidden;"
             sandbox="allow-scripts allow-same-origin">
           </iframe>
 
-          <h4 class="subheadingAvatar">Button Variants</h4>
-          <p class="descriptionAvatar">These are some of the variants available for the button component.Check code snippet if you want it.</p>
+
+          <h4 class="subheading">Button Variants</h4>
+          <p class="description">These are some of the variants available for the button component.Check code snippet if you want it.</p>
 
           <div class="ButtonContainer">
             <button class="btn success">
@@ -115,13 +116,13 @@
           </div>
 
           <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520success%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Button%250A%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520hover1%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Button%250A%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520hover2%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Button%250A%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520hover3%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Button%250A%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%2520%253C%252Fdiv%253E"
-            style="width: 736px; height: 498px; border:0; transform: scale(1); overflow:hidden;"
+            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520success%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Button%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520hover1%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Button%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520hover2%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Button%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520hover3%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Button%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%253C%252Fdiv%253E"
+            style="width: 327px; height: 382px; border:0; transform: scale(1); overflow:hidden;"
             sandbox="allow-scripts allow-same-origin">
           </iframe>
 
-          <h4 class="subheadingAvatar">Button with Icons</h4>
-          <p class="descriptionAvatar">You can also add the icons as per your requirement into your button to represent some more meaningful and contextful message.</p>
+          <h4 class="subheading">Button with Icons</h4>
+          <p class="description">You can also add the icons as per your requirement into your button to represent some more meaningful and contextful message.</p>
 
           <div class="ButtonContainer">
             <button class="btn success btn-icon">
@@ -136,14 +137,14 @@
           </div>
 
           <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%250A%2520%2509%2509%253Cbutton%2520class%253D%2522btn%2520success%2520btn-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522Resources%2520%252FIcons%252Fmail.png%2522%2520alt%253D%2522mailIcon%2522%2520%2509%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520height%253D%252220px%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Email%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520secondary%2520btn-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522.%252FResources%2520%252FIcons%252Fcustomer-service.png%2522%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522mailIcon%2522%2520height%253D%252220px%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Contact%2520Us%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%253C%252Fdiv%253E"
-            style="width: 736px; height: 462px; border:0; transform: scale(1); overflow:hidden;"
+            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520success%2520btn-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522Resources%2520%252FIcons%252Fmail.png%2522%2520%250A%2509%2509%2509%2509alt%253D%2522mailIcon%2522%2520height%253D%252220px%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Email%250A%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%250A%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520secondary%2520btn-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522.%252FResources%2520%252FIcons%252Fcustomer-service.png%2522%2520%250A%2509%2509%2509%2509alt%253D%2522mailIcon%2522%2520height%253D%252220px%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Contact%2520Us%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%2520%253C%252Fdiv%253E"
+            style="width: 498px; height: 323px; border:0; transform: scale(1); overflow:hidden;"
             sandbox="allow-scripts allow-same-origin">
           </iframe>
 
-          <h4 class="subheadingAvatar">Button
+          <h4 class="subheading">Button
           with Animation</h4>
-          <p class="descriptionAvatar">You can also add the animation inot the button component as per need to provide more contextful info about the user events.</p>
+          <p class="description">You can also add the animation inot the button component as per need to provide more contextful info about the user events.</p>
 
           <div class="ButtonContainer">
               <button class="btn animationBtn btn-icon">
@@ -155,10 +156,10 @@
           </div>
 
           <iframe
-            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520animationBtn%2520btn-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522.%252FResources%2520%252FIcons%252FSpin-1s-200px.svg%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2522%2520alt%253D%2522loadingSvg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520height%253D%252230px%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Loading%250A%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%2520%253C%252Fdiv%253E"
-            style="width: 736px; height: 336px; border:0; transform: scale(1); overflow:hidden;"
+            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522ButtonContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522btn%2520animationBtn%2520btn-icon%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522.%252FResources%2520%252FIcons%252FSpin-1s-200px.svg%2522%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522loadingSvg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520height%253D%252230px%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Loading%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fbutton%253E%250A%2520%253C%252Fdiv%253E"
+            style="width: 498px; height: 248px; border:0; transform: scale(1); overflow:hidden;"
             sandbox="allow-scripts allow-same-origin">
-           </iframe>
+          </iframe>
         </main>
     </div>
 </body>
