--- a/list.html
+++ b/list.html
@@ -29,8 +29,8 @@
         </aside>
         <main>
             <h2 class="Main-Heading">List</h2>
-            <p class="descriptionAvatar">List are great component that lets you display a series of information.Great way of organising content.</p>
-            <h4 class="subheadingAvatar">Some Example</h4>
+            <p class="description">List are great component that lets you display a series of information.Great way of organising content.</p>
+            <h4 class="subheading">Some Example</h4>
 
             <div class="listContainer">
                 <div class="list">
@@ -43,8 +43,8 @@
                 </div>
             </div>
 
-            <h4 class="subheadingAvatar">Spaced List</h4>
-            <p class="descriptionAvatar">These are the lists that you will encounter the most in every other plateform that you have been.</p>
+            <h4 class="subheading">Spaced List</h4>
+            <p class="description">These are the lists that you will encounter the most in every other plateform that you have been.</p>
 
             <div class="listContainer">
                 <div class="list">
@@ -58,13 +58,13 @@
             </div>
 
             <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2509%253Cdiv%2520class%253D%2522listContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cul%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%253ELorem%2520ipsum%2520dolor%2520sit%2520amet%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%253EConsectetur%2520adipiscing%2520elit%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%253EInteger%2520molestie%2520lorem%2520at%2520massa%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%253EFacilisis%2520in%2520pretium%2520nisl%2520aliquet%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Ful%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%253C%252Fdiv%253E"
-                style="width: 736px; height: 407px; border:0; transform: scale(1); overflow:hidden;"
+                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%253Cdiv%2520class%253D%2522listContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cul%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%253ELorem%2520ipsum%2520dolor%2520sit%2520amet%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%253EConsectetur%2520adipiscing%2520elit%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%253EInteger%2520molestie%2520lorem%2520at%2520massa%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%253EFacilisis%2520in%2520pretium%2520nisl%2520aliquet%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Ful%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%253C%252Fdiv%253E"
+                style="width: 470px; height: 308px; border:0; transform: scale(1); overflow:hidden;"
                 sandbox="allow-scripts allow-same-origin">
-             </iframe>
+            </iframe>
 
-             <h4 class="subheadingAvatar">Stacked List</h4>
-             <p class="descriptionAvatar">These are the lists that you will encounter in   notifications page on every other plateform that you have been.</p>
+             <h4 class="subheading">Stacked List</h4>
+             <p class="description">These are the lists that you will encounter in   notifications page on every other plateform that you have been.</p>
 
             <div class="listContainer">
                 <div class="list">
@@ -77,8 +77,8 @@
                 </div>
             </div>
 
-            <h4 class="subheadingAvatar">Stacked List</h4>
-             <p class="descriptionAvatar">These are the lists that you will encounter in   notifications page on every other plateform that you have been.</p>
+            <h4 class="subheadingAvatar">List Group Item</h4>
+             <p class="descriptionAvatar">These are the lists group that you will encounter in notifications page on every other plateform that you have been.</p>
 
              <div class="listContainer">
                 <div class="list">
@@ -109,10 +109,10 @@
             </div>
 
             <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2509%253Cdiv%2520class%253D%2522listContainer%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cul%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2509%253Cli%2520class%253D%2522stacked%2520simpleList%2522%253E%250A%2509%2509%2509%2509%2509%2509A%2520simple%2520default%2520list%2520group%2520item%250A%2509%2509%2509%2509%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520primaryList%2522%253E%250A%2509%2509%2509%2509%2509%2509A%2520simple%2520primary%2520list%2520group%2520item%250A%2509%2509%2509%2509%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520secondaryList%2522%253E%250A%2509%2509%2509%2509%2509%2509A%2520simple%2520secondary%2520list%2520group%2520item%250A%2509%2509%2509%2509%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520successList%2522%253E%250A%2509%2509%2509%2509%2509%2509A%2520simple%2520success%2520list%2520group%2520item%250A%2509%2509%2509%2509%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520dangerList%2522%253E%250A%2509%2509%2509%2509%2509%2509A%2520simple%2520danger%2520list%2520group%2520item%250A%2509%2509%2509%2509%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520warningList%2522%253E%250A%2509%2509%2509%2509%2509%2509A%2520simple%2520warning%2520list%2520group%2520item%250A%2509%2509%2509%2509%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520infoList%2522%253E%250A%2509%2509%2509%2509%2509%2509A%2520simple%2520info%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520lightList%2522%253E%250A%2509%2509%2509%2509%2509%2509A%2520simple%2520light%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520darkList%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520A%2520simple%2520dark%2520list%2520group%2520item.%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Ful%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2509%253C%252Fdiv%253E"
-                style="width: 736px; height: 929px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-         </iframe>
+            src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%2520%253Cdiv%2520class%253D%2522listContainer%2522%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522list%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cul%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520simpleList%2522%253EA%2520simple%2520default%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520primaryList%2522%253EA%2520simple%2520primary%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520secondaryList%2522%253EA%2520simple%2520secondary%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520successList%2522%253EA%2520simple%2520success%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520dangerList%2522%253EA%2520simple%2520danger%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520warningList%2522%253EA%2520simple%2520warning%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520infoList%2522%253EA%2520simple%2520info%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520lightList%2522%253EA%2520simple%2520light%2520list%2520group%2520item%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked%2520darkList%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520A%2520simple%2520dark%2520list%2520group%2520item.%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%2520%2520%2520%2520%2520%2520%2520%253C%252Ful%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%253C%252Fdiv%253E%250A"
+            style="width: 622px; height: 637px; border:0; transform: scale(1); overflow:hidden;"
+            sandbox="allow-scripts allow-same-origin">
+          </iframe>
         </main>
     </div>
 </body>
