--- a/avatar.html
+++ b/avatar.html
@@ -30,8 +30,8 @@
         </aside>
         <main>
             <h2 class="Main-Heading">Avatar</h2>
-            <p class="descriptionAvatar">The avatar component is used to represent a user and displays the profile picture,initials or fallback icon and provide contextful feedback message for typical user actions.</p>
-            <h4 class="subheadingAvatar">Some Example</h4>
+            <p class="description">The avatar component is used to represent a user and displays the profile picture,initials or fallback icon and provide contextful feedback message for typical user actions.</p>
+            <h4 class="subheading">Some Example</h4>
             <div class="Avatar">
                 <img src="Resources /Images/avatar.png" alt="avatar-image">
                 <img src="./Resources /Images/avatar6.jpeg" alt="avatar-image">
@@ -39,10 +39,11 @@
             </div>
 
             <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C1%29&t=seti&wt=none&l=auto&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%2520class%253D%2522Avatar%2522%253E%250A%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522Resources%2520%252FImages%252Favatar.png%2522%2520alt%253D%2522avatar-image%2522%253E%250A%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522.%252FResources%2520%252FImages%252Favatar6.jpeg%2522%2520alt%253D%2522avatar-image%2522%253E%250A%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522.%252FResources%2520%252FImages%252Favatar7.svg%2522%2520alt%253D%2522avatar-image%2522%253E%250A%2520%253C%252Fdiv%253E"
-                style="width: 722px; height: 282px; border:0; transform: scale(1); overflow:hidden;"
+                src="https://carbon.now.sh/embed?bg=rgba%28250%2C252%2C255%2C0%29&t=3024-night&wt=none&l=auto&ds=true&dsyoff=21px&dsblur=37px&wc=true&wa=true&pv=24px&ph=14px&ln=false&fl=1&fm=Hack&fs=12px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cdiv%2520class%253D%2522Avatar%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522Resources%2520%252FImages%252Favatar.png%2522%2520alt%253D%2522avatar-image%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522.%252FResources%2520%252FImages%252Favatar6.jpeg%2522%2520alt%253D%2522avatar-image%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522.%252FResources%2520%252FImages%252Favatar7.svg%2522%2520alt%253D%2522avatar-image%2522%253E%250A%2520%253C%252Fdiv%253E"
+                style="width: 564px; height: 203px; border:0; transform: scale(1); overflow:hidden;"
                 sandbox="allow-scripts allow-same-origin">
             </iframe>
+            
         </main>
     </div>
 </body>
